Fix path resolving

--- a/.env
+++ b/.env
@@ -1,11 +1,10 @@
 #!/usr/bin/env bash
 
-project="$(cd "$(pwd)/$(dirname "$BASH_SOURCE")" && pwd)"
+FLANK_ROOT="$(cd "$(dirname "${BASH_SOURCE[0]-$0}")" && pwd)"
+TEST_PROJECTS="$FLANK_ROOT/test_projects"
+FLANK_FIXTURES_TMP="$FLANK_ROOT/test_runner/src/test/kotlin/ftl/fixtures/tmp"
 
-export FLANK_ROOT=$project
-export FLANK_FIXTURES_TMP="$project/test_runner/src/test/kotlin/ftl/fixtures/tmp"
-
-. "$project/test_projects/ops.sh"
+. "$TEST_PROJECTS/ops.sh"
 
 function bash_debug() {
   set -euxo pipefail
