--- a/.github/workflows/macos_workflow.yml
+++ b/.github/workflows/macos_workflow.yml
@@ -33,10 +33,8 @@ jobs:
     - name: Gradle check
       uses: eskatos/gradle-command-action@v1
       with:
-        # Path to the Gradle executable
-        gradle-executable: "./test_runner/gradlew"
         # Gradle command line arguments, see gradle --help
-        arguments: "-p test_runner check"
+        arguments: "test_runner:check"
         
     - name: Codecov
       uses: codecov/codecov-action@v1.0.7
