--- a/.github/workflows/release_notes_generation.yml
+++ b/.github/workflows/release_notes_generation.yml
@@ -18,8 +18,7 @@ jobs:
     - name: Generate documentation
       uses: eskatos/gradle-command-action@v1
       with:
-        gradle-executable: "./test_runner/gradlew"
-        arguments: "-p test_runner processCliAsciiDoc"
+        arguments: "test_runner:processCliAsciiDoc"
 
     - name: Gradle Build flankScripts and add it to PATH
       run: |
