--- a/.github/workflows/ubuntu-workflow.yml
+++ b/.github/workflows/ubuntu-workflow.yml
@@ -32,5 +32,4 @@ jobs:
       - name: Gradle clean build
         uses: eskatos/gradle-command-action@v1
         with:
-          gradle-executable: "./test_runner/gradlew"
-          arguments: "-p test_runner clean build"
+          arguments: "clean test_runner:build"
