--- a/.github/workflows/ubuntu-workflow.yml
+++ b/.github/workflows/ubuntu-workflow.yml
@@ -32,4 +32,4 @@ jobs:
       - name: Gradle clean build
         uses: eskatos/gradle-command-action@v1
         with:
-          arguments: "clean test_runner:build"
+          arguments: "clean build"
